Fix width not working inside plain_message